Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6.7, 10.7.5, 10.6.8, 10.6.9, 10.8.4, 10.9.2
-
Centos 7
Description
I have a bunch of CentOS 7 servers that I manage and we recently upgraded MariaDB from 10.5 to 10.6 on those servers. Now I'm seeing some odd problems which manifest as serious performance issues after I import a database. Meaning that SQL queries that were running in a short time suddenly became very slow.
I then found that simply running "mysqlcheck -a" totally fixes the problem and I can reproduce this issue every time but I can't figure out what is causing it.
In addition to the performance issues that I see, I also see odd stats from information_schema and the cardinality of the indexes. The latter part is I think why the SQL queries become slower.
You can see a full test of this issue in the attached screenshot. I can put that into a code box but I thought the annotations made it easier to see the problems here. Anyone seen this before or have any idea what it going on?
EDIT: additional info
I found that disabling innodb_stats_persistent completely fixes the problem. Of course, that is likely not a real fix. Is there a problem with innodb_stats_persistent in MariaDB 10.6?
Attachments
Issue Links
- is duplicated by
-
MDEV-27214 Import with disabled keys corrupts meta-data like rows, indexes, ...
-
- Closed
-
- relates to
-
MDEV-27805 tpcc workload shows regression with MDB-10.6
-
- Closed
-
-
MDEV-28920 Rescheduling of innodb_stats_func() missing
-
- Closed
-
-
MDEV-35163 InnoDB persistent statistics fail to update after ALTER TABLE...ALGORITHM=COPY
-
- Closed
-
-
MDEV-515 innodb bulk insert
-
- Closed
-
-
MDEV-24818 Concurrent use of InnoDB table is impossible until the first transaction is finished
-
- Closed
-
-
MDEV-27214 Import with disabled keys corrupts meta-data like rows, indexes, ...
-
- Closed
-
-
MDEV-32785 background innodb stats recalculation causing incorrect rowcounts during multiple row insert statement
-
- Open
-